deployments/k8s/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pig-deployment
  labels:
    app: pig
spec:
  replicas: 2
  selector:
    matchLabels:
      app: pig
  template:
    metadata:
      labels:
        app: pig
    spec:
      containers:
        - name: pig
          image: tclutin/pig:latest
          ports:
            - containerPort: 8000
