deployments/k8s/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pig-service
spec:
  type: NodePort
  selector:
    app: pig
  ports:
    - port: 80
      targetPort: 8000
      nodePort: 30007
