deployments/k8s/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pig-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /pig/(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: pig-service
                port:
                  number: 80
